# Sucessful-Programmer-Journey

./: README.md  pyproject.toml
02-software-engineering/devops/docker/: docker-commands.sh  study-notes.md
02-software-engineering/devops/docker/app-01/: Dockerfile
02-software-engineering/programming/asyncio/: basics.py
02-software-engineering/programming/pydantic/: pratical_example_1.py  pratical_example_3.py  required_optional_fields.py  type_coercion.py
asyncio/: concurrency.py  concurrent_rag.py  handling_errors.py  queues.py  timeouts.py
code-design/: encapsulation.py  inheritance.py  oop.py  polymorphism.py
design patterns/: the-context-manager.py  the-factory-pattern.py  the-singleton.py
docker/: cheatsheet_data_volumes.md  cheatsheet_images_containers.md  docker-commands.sh  study-notes.md
docker/app-03/pages/: feedback.html
docker/assignment-problem/node-app/: Dockerfile
docker/assignment-problem/python-app/: Dockerfile
pydantic/: README.md  deserialization.py  introduction.py  pratical_example_2.py  pratical_example_3.py  rag_basic.py  serialization.py
python/: the-gatekeeper.py  the-math-whiz.py  the-registry.py
